--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 	<script>
 		/*
 		if (navigator.onLine === true) {
-			location.replace("/card/");
+			location.replace("/model-01/");
 		}
 		*/
 	</script>
