--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 	
 	<script>
 		if (navigator.onLine === false) {
-			location.replace("/card/offline.html");
+			location.replace("/model-01/offline.html");
 		}
 	</script>
 	
