--- a/index.html
+++ b/index.html
@@ -567,11 +567,11 @@
 			-webkit-animation-duration: 0.4s;
 			animation-name: slideIn;
 			animation-duration: 0.4s;
-			background: rgba(255, 255, 255, 0.85);
+			background: rgba(38, 38, 38, 0.90);
 		}
 		/* The Close Button */
 		.close {
-			color: #575a5a;
+			color: #bfbfbf;
 			float: right;
 			font-size: 28px;
 			font-weight: bold;
@@ -588,12 +588,12 @@
 			background-color: #fff;
 			color: white;
 			background-color: initial;
-			border-bottom: 1px solid #b5b5b5;
+			border-bottom: 1px solid #737373;
 		}
 		.modal-header h2 {
 			font-size: 15px;
 			line-height: 28px;
-			color: #575a5a;
+			color: #bfbfbf;
 			font-weight: normal;
 			margin: 0;
 		}
@@ -673,8 +673,10 @@
 			width: 100%; 
 			height: 50px;
 			*/
-			background: #BF2A45 !important;
-			color: #F2E9C2 !important;
+			color: #0ff2f2 !important;
+			font-size: 0.67em !important;
+			box-shadow: 2px 0px inset #0597f2, 0px 2px inset #0597f2, -2px 0px inset #0ff2f2, 0px -2px inset #0ff2f2 !important;
+			border-radius: 4px;
 		}
 	</style>
 	
