--- a/index.html
+++ b/index.html
@@ -791,10 +791,18 @@
 							<span class="verticalaligntop lineheight1-6"><strong>Vantagens de um cartão digital?</strong><br/><i>30/06/2020 - Brasil</i><br/>As pessoas para quem você compartilhou, se tornam potenciais divulgadoras e compartilhadoras.</span>
 							<span class="clearall"></span>
 						</p>
-						<p class="topmargin0 clearall">
+						<p class="topmargin0 clearall portfolioarea">
 							<img alt="Angel Model - Portfólio 03" src="imgs/portfolio-03.png" class="avatar-left avatar-square-left photo verticalaligntop" height="85" width="85" title="Angel Model - Portfólio 03"/>
 							<span class="verticalaligntop lineheight1-6"><strong>Tem mais?</strong><br/><i>30/06/2020 - Brasil</i><br/>Podem ser adicionados como ícones e executados das telas dos celulares, aparecer como resultado no Google etc.</span>
 							<span class="clearall"></span>
+						</p>
+						<p class="topmargin0 clearall aligncenter">
+							<span class="verticalaligntop lineheight1-6"><strong>Curioso?</strong><br/>Clique no ícone abaixo e veja uma breve apresentação.</span>
+							<span class="clearall"></span>
+						</p>
+						<p class="topmargin0 clearall aligncenter">
+							<a href="https://www.youtube.com/watch?v=XrdF6rcH530" target="_blank" class="dot dothighlight" title="Youtube - Dica do Mau - Cartão Digital"><i class="fab fa-youtube"></i></a>
+							<a href="https://www.youtube.com/watch?v=XrdF6rcH530" target="_blank" class="iconslinkstextsfloat iconslinkstextshighlight" title="Youtube - Dica do Mau - Cartão Digital"><strong>Dica do Mau:<br/>Cartão Digital</strong></a>
 						</p>
 					</div>
 					<div id="SOBRE" class="tabcontent">
